# stockfish-api

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  echo  file  input.cpp  start
.github/workflows/: msbuild.yml
arduino/: stockfish.ino
src/: main.cpp  stockfish.cpp
src/input/: main.cpp
src/output/: main.cpp
src/webpage/: api.html  api.php  index.html  index.php  styles.css  thing.html
